--- a/portfolio.html
+++ b/portfolio.html
@@ -280,8 +280,8 @@
                 <a href="./index.html" class="logo link">Web<span>Studio</span></a>
                 <address class="address-footer">г. Киев, пр-т Леси Украинки, 26</address>
                 <ul class="auth-nav-footer list">
-                    <li class="auth-nav item"><a href="mailto:" class="link"> info@devstudio.com </a> </li>
-                    <li class="auth-nav item"><a href="tel:" class="link"> +38 096 111 11 11 </a></li>
+                    <li class="auth-nav-item"><a href="mailto:" class="link"> info@devstudio.com </a> </li>
+                    <li class="auth-nav-item"><a href="tel:" class="link"> +38 096 111 11 11 </a></li>
                 </ul>
             </div>
             <div class="link-box">
@@ -320,14 +320,14 @@
             <div class="form-box">
                 <h3 class="subtitle">Подпишитесь на рассылку</h3>
                 <form class="footer-form"> 
-                    <label for="">
-                        <input type="email" name="user-email" class="form-input" placeholder="E-mail">
+                    <label for="email">
+                        <input class="form-input" type="email" name="user-email" id="email" placeholder="E-mail">
                     </label>
                     <button type="submit" class="form-button">
                     Подписаться
-                    <svg class="icon">
-                        <use href="./imeges/icons.svg#icon-send"></use>
-                    </svg> 
+                        <svg class="icon" width="24" height="24">
+                            <use href="./imeges/icons.svg#icon-send"></use>
+                        </svg> 
                     </button>
                 </form>
             </div>
