--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
             <nav class="header-nav">
                 <a href="./index.html" class="logo link">Web<span>Studio</span></a>
                 <ul class="site-nav list">
-                    <li class="site-nav-item"><a href="./index.html" class="link "> Студия </a></li>
-                    <li class="site-nav-item"><a href="./portfolio.html" class="link current"> Портфолио </a></li>
+                    <li class="site-nav-item"><a href="./index.html" class="link current"> Студия </a></li>
+                    <li class="site-nav-item"><a href="./portfolio.html" class="link"> Портфолио </a></li>
                     <li class="site-nav-item"><a href="" class="link"> Контакты </a></li>
                 </ul>
             </nav>
@@ -62,28 +62,30 @@
                     </li>
                 </ul>
             </nav>
-            <ul class="mobile-menu-auth-list">
-                <li class="mobile-menu-auth-item">
-                    <a href="tel:" class="mobile-menu-auth-link-tell">+38 096 111 11 11</a>
-                </li>
-                <li class="mobile-menu-auth-item">
-                    <a href="mailto:" class="mobile-menu-auth-link">info@devstudio.com</a>
-                </li>
-            </ul>
-            <ul class="mobile-menu-social-list">
-                <li class="mobile-menu-social-item">
-                    <a href="" class="mobile-menu-social-link">Instagram</a>
-                </li>
-                <li class="mobile-menu-social-item">
-                    <a href="" class="mobile-menu-social-link">Twitter</a>
-                </li>
-                <li class="mobile-menu-social-item">
-                    <a href="" class="mobile-menu-social-link">Facebook</a>
-                </li>
-                <li class="mobile-menu-social-item">
-                    <a href="" class="mobile-menu-social-link">LinkedIn</a>
-                </li>
-            </ul>
+            <div class="mobile-menu-box">
+                <ul class="mobile-menu-auth-list">
+                    <li class="mobile-menu-auth-item">
+                        <a href="tel:" class="mobile-menu-auth-link-tell">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mobile-menu-auth-item">
+                        <a href="mailto:" class="mobile-menu-auth-link">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-menu-social-list">
+                    <li class="mobile-menu-social-item">
+                        <a href="" class="mobile-menu-social-link">Instagram</a>
+                    </li>
+                    <li class="mobile-menu-social-item">
+                        <a href="" class="mobile-menu-social-link">Twitter</a>
+                    </li>
+                    <li class="mobile-menu-social-item">
+                        <a href="" class="mobile-menu-social-link">Facebook</a>
+                    </li>
+                    <li class="mobile-menu-social-item">
+                        <a href="" class="mobile-menu-social-link">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
         <!-- Секция портфолио  -->
