--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,8 @@
             <nav class="header-nav">
                 <a href="./index.html" class="logo link">Web<span>Studio</span></a>
                 <ul class="site-nav list">
-                    <li class="site-nav-item"><a href="./index.html" class="link current"> Студия </a></li>
-                    <li class="site-nav-item"><a href="./portfolio.html" class="link"> Портфолио </a></li>
+                    <li class="site-nav-item"><a href="./index.html" class="link"> Студия </a></li>
+                    <li class="site-nav-item"><a href="./portfolio.html" class="link current"> Портфолио </a></li>
                     <li class="site-nav-item"><a href="" class="link"> Контакты </a></li>
                 </ul>
             </nav>
